web commit by madmax

--- a/doc/bugs/iniline_breaks_toc_plugin.mdwn
+++ b/doc/bugs/iniline_breaks_toc_plugin.mdwn
@@ -27,6 +27,12 @@ Menganito|234,56
 Menganito|234,56
 """]]
 
+
+[[wikilink|users]]
+
+Here's a paragraph.
+
+
 [[inline pages="users/joey" raw="yes"]]
 
 bla bla
