web commit by madmax

--- a/doc/bugs/iniline_breaks_toc_plugin.mdwn
+++ b/doc/bugs/iniline_breaks_toc_plugin.mdwn
@@ -5,6 +5,11 @@ to include common snippets in various pages, and it works as advertised, but if 
 
 I'll try here to reproduce one example...
 
+You can see that wikilink is rendered in one line and 'here's paragraph' is not a separate paragraph.
+
+All this is displayed correctly if toc is removed.
+
+
 TEST1
 =====
 
