--- a/doc/todo/toc_plugin_to_skip_one_level.mdwn
+++ b/doc/todo/toc_plugin_to_skip_one_level.mdwn
@@ -6,4 +6,13 @@ I use h1 for big title on each page, and don't want it in my toc on that page.
 
 That way I could have toc for h2 and h3 and h1 is skipped bacause it is big title for many pages.
 
+> I realize there is a lot of personal preference involved here but before
+> another option is added, I wonder why you're using a h1 for a title on
+> each page when the page name already appears at the top of each page. And
+> if the page name isn't right for the title, you can use 
+> \[[meta title="foo"]] to override it. And this purposefully doesn't show
+> up in the toc. --[[Joey]]
+
 P.S. I tried to indent "[[toc..." to make it monospaced but it does not work ?
+
+> It's monospaced here.
