--- a/doc/bugs/iniline_breaks_toc_plugin.mdwn
+++ b/doc/bugs/iniline_breaks_toc_plugin.mdwn
@@ -22,6 +22,9 @@ All this is displayed correctly if toc is removed.
 > Debian, and I suggest you give it a try if you're experiencing this
 > problem.
 > 
+> (Actually, this seems closely related to the problem described
+> [here](http://bugs.debian.org/421843).
+> 
 > I'm going to close this bug report since it's a markdown bug. --[[Joey]]
 [[tag done]]
 
