--- a/doc/todo/default_content_for_new_post.mdwn
+++ b/doc/todo/default_content_for_new_post.mdwn
@@ -1,3 +1,5 @@
+# Use Case *[[plugins/inline]]*
+
 Along the same lines as having a [[default_name_for_new_post]]s, an option
 to include default content in a new [[plugins/inline]] post would help with
 tasks like using an inline for a comment form on each new blog post.
@@ -41,3 +43,15 @@ a template that appends "(done)" to the title if the page links to
 
 > All of course bearing in mind that I'm just commenting because I don't have the skills to actually make the required changes. ;-) -- [[AdamShand]]
 
+
+# Use Case *Copyright Notes*
+
+Leaving aside the [[plugins/inline]] stuff I have a completely different
+use case for this (which is also why I wrote the plugin Joey mentioned:
+for a GNU-affiliated wiki we want to track copyright stuff right from
+the beginning, as the wiki pages may eventually evolve into official
+GNU documentation.  That's why I want to have such copyright notices
+be included in every freshly created page by default (and having them
+interpreted by another plugin I also emailed to Joey).  Of course this
+will also only work when using web-editing, but the people using
+rcs-editing (coining new terms, eh ;-)?) usually know what they're doing.
