web commit by tschwinge: Improve formatting from hell.

--- a/doc/todo/default_content_for_new_post.mdwn
+++ b/doc/todo/default_content_for_new_post.mdwn
@@ -47,11 +47,18 @@ a template that appends "(done)" to the title if the page links to
 # Use Case *Copyright Notes*
 
 Leaving aside the [[plugins/inline]] stuff I have a completely different
-use case for this (which is also why I wrote the plugin Joey mentioned:
-for a GNU-affiliated wiki we want to track copyright stuff right from
+use case for this (which is also why I wrote the plugin Joey mentioned).
+
+For a GNU-affiliated wiki we want to track copyright stuff right from
 the beginning, as the wiki pages may eventually evolve into official
-GNU documentation.  That's why I want to have such copyright notices
+GNU documentation.
+
+That's why I want to have such copyright notices
 be included in every freshly created page by default (and having them
-interpreted by another plugin I also emailed to Joey).  Of course this
+interpreted by another plugin I also emailed to Joey).
+
+Of course this
 will also only work when using web-editing, but the people using
 rcs-editing (coining new terms, eh ;-)?) usually know what they're doing.
+
+--[[tschwinge]]
