Mark todo item for git subdirectory support done.

--- a/doc/todo/Support_subdirectory_of_a_git_repo.mdwn
+++ b/doc/todo/Support_subdirectory_of_a_git_repo.mdwn
@@ -3,3 +3,5 @@ Git does not support checking out a subdirectory of a repository as a repository
 > This seems to be a mandatory feature.  I'll start working to implement it as soon as possible  --[[Roktas]]
 
 >> Thanks! --[[JoshTriplett]]
+
+[[todo/done]]; patches from Jamey Sharp. --[[JoshTriplett]]
