--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 ikiwiki (2.7) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Add an editcontent hook.
   * Support for looking in multiple directories for underlay files.
   * Plugins can add new directories to the search path with the add_underlay
@@ -17,6 +18,18 @@ ikiwiki (2.7) UNRELEASED; urgency=low
     so that links from wikilinks don't confuse the parser.
   * mercurial: Pass --style default to hg log to ensure right format is used.
   * mercurial: Fix rcs_getctime (thanks, bma)
+
+  [ Josh Triplett ]
+  * Use git-log rather than the shell, git-rev-list, and git-diff-tree.
+    Patch by Jamey Sharp <jamey@minilop.net>.
+  * Renames from git-diff-tree aren't handled, so don't ask for them.
+    Patch by Jamey Sharp
+  * Handle operating in sub-trees of a git repository.
+    When looking for git commits that affect the wiki, only include changes
+    that affect the ikiwiki source directory. If that is not the top-level
+    directory in this git repository, strip off the prefix as given by
+    `git-rev-parse --show-prefix` from all names reported by git-log.
+    Patch by Jamey Sharp
 
  -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 22:15:52 -0400
 
