web commit by madmax

--- a/doc/bugs/iniline_breaks_toc_plugin.mdwn
+++ b/doc/bugs/iniline_breaks_toc_plugin.mdwn
@@ -28,6 +28,8 @@ All this is displayed correctly if toc is removed.
 > I'm going to close this bug report since it's a markdown bug. --[[Joey]]
 [[tag done]]
 
+>> thanks, that fixes it.
+
 
 TEST1
 =====
