web commit by http://natalian.org/

--- a/doc/rcs/git.mdwn
+++ b/doc/rcs/git.mdwn
@@ -5,3 +5,6 @@
 Ikiwiki can run as a post-update hook to update a wiki whenever commits
 come in. When running as a [[cgi]] with Git, ikiwiki automatically
 commits edited pages, and uses the Git history to generate the [[RecentChanges]] page.
+
+
+[[Editing_wiki_pages_manually|GitManual]]
