web commit by http://natalian.org/

--- a/doc/rcs/gitmanual.mdwn
+++ b/doc/rcs/gitmanual.mdwn
@@ -72,3 +72,7 @@ Great, we see the usb.mdwn file has been modified. Now we need to check it out t
 
 * this master/origin stuff
 * why do I have to explicitly say the filename "usb.mdwn" for it to be updated?
+
+# Ack
+
+Thanks to gitte on #git on Freenode
