--- a/doc/rcs/gitmanual.mdwn
+++ b/doc/rcs/gitmanual.mdwn
@@ -75,6 +75,8 @@ Great, we see the usb.mdwn file has been modified. Now we need to check it out t
 * this master/origin stuff
 * why do I have to explicitly say the filename "usb.mdwn" for it to be updated?
 * why do I have to explicitly have to write the url if I am going a git-pull again? I know I can alias it, but why can't it just pull from the last source?
+* how ikiwiki interfaces with git. does it have its own working copy? or is it the files simply in ~/wikiwc?
+* I know git-push seems unpopular (git-pull seems to have the emphasis), though I think it is really convenient
 
 # Ack
 
