web commit by http://natalian.org/

--- a/doc/rcs/gitmanual.mdwn
+++ b/doc/rcs/gitmanual.mdwn
@@ -14,6 +14,8 @@ Wiki page created with [ikiwiki](http://ikiwiki.info). Example usb.mdwn [usb](ht
 
 I wonder why a "pull" doesn't just init a repo like a "svn co" does?
 
+I think I should have used `git-clone ssh://si.dabase.com/home/hendry/wikiwc/.git/`
+
     monty:~/git-testing% git-init
     Initialized empty Git repository in .git/
 
