web commit by http://natalian.org/

--- a/doc/rcs/gitmanual.mdwn
+++ b/doc/rcs/gitmanual.mdwn
@@ -38,6 +38,8 @@ You might want to set some config variables like your email as this [tutorial](h
     Created commit d3507df: added test
      1 files changed, 1 insertions(+), 0 deletions(-)
 
+I think I should have used `git push origin` here...
+
     monty:~/git-testing% git-push ssh://si.dabase.com/home/hendry/wikiwc/.git/
     updating 'refs/heads/master'
       from 75a4a8e94e5fff2a4beced1574e772742d3f9847
