--- a/doc/rcs/gitmanual.mdwn
+++ b/doc/rcs/gitmanual.mdwn
@@ -13,8 +13,7 @@ Wiki page created with [ikiwiki](http://ikiwiki.info). Example usb.mdwn [usb](ht
 ## on monty (my laptop)
 
 I wonder why a "pull" doesn't just init a repo like a "svn co" does?
-
-I think I should have used `git-clone ssh://si.dabase.com/home/hendry/wikiwc/.git/`
+Ah, I should have used `git-clone ssh://si.dabase.com/home/hendry/wikiwc/.git/`
 
     monty:~/git-testing% git-init
     Initialized empty Git repository in .git/
@@ -38,7 +37,7 @@ You might want to set some config variables like your email as this [tutorial](h
     Created commit d3507df: added test
      1 files changed, 1 insertions(+), 0 deletions(-)
 
-I think I should have used `git push origin` here...
+I should have used `git push origin` here...
 
     monty:~/git-testing% git-push ssh://si.dabase.com/home/hendry/wikiwc/.git/
     updating 'refs/heads/master'
@@ -73,12 +72,12 @@ Great, we see the usb.mdwn file has been modified. Now we need to check it out t
 
     hendry:242$ git-checkout master usb.mdwn
 
+I find this a little odd... Is this a required step for ikiwiki?
 
 # Stuff I am confused about
 
 * this master/origin stuff
 * why do I have to explicitly say the filename "usb.mdwn" for it to be updated?
-* why do I have to explicitly have to write the url if I am going a git-pull again? I know I can alias it, but why can't it just pull from the last source?
 * how ikiwiki interfaces with git. does it have its own working copy? or is it the files simply in ~/wikiwc?
 * I know git-push seems unpopular (git-pull seems to have the emphasis), though I think it is really convenient
 
