--- a/doc/plugins/search/discussion.mdwn
+++ b/doc/plugins/search/discussion.mdwn
@@ -9,3 +9,9 @@ every time I refresh or rebuild the wiki:
 Nevertheless, searching for pages works as expected, as far as I can tell.
 
 --[[tschwinge]]
+
+Have you upgraded hyperestradier since setting up the wiki? Apparently it
+breaks a lot when it's upgraded, I find I often have to re-run ikiwiki
+-setup after upgrading hyperestradier to force it to rebuilt its database,
+then incremental updates work again for a while. This is one of the reasons
+I want to change to a different search backend. --[[Joey]]
