fix issue bma noticed (why does it use "r2"?)

--- a/doc/bugs/Mercurial_example_diffurl_should_read_r2__44___not_changeset.mdwn
+++ b/doc/bugs/Mercurial_example_diffurl_should_read_r2__44___not_changeset.mdwn
@@ -7,3 +7,5 @@ should be:
     diffurl => "http://localhost:8000/?fd=\[[r2]];file=\[[file]]",
 
 (changeset doesn't get expanded; r2 does, to what appears to be The Right Thing)
+
+[[done]]
