--- a/doc/todo/toc_plugin_to_skip_one_level.mdwn
+++ b/doc/todo/toc_plugin_to_skip_one_level.mdwn
@@ -14,7 +14,7 @@ That way I could have toc for h2 and h3 and h1 is skipped bacause it is big titl
 > up in the toc. --[[Joey]]
 
 >> aaaahhh, I made a mistake. U used some other page.tmpl and title was hidden,
->> so I used h1 for it. Thanks, consider this closed :)
+>> so I used h1 for it. Thanks, consider this [[closed|done]] :)
 
 P.S. I tried to indent "[[toc..." to make it monospaced but it does not work ?
 
