web commit by tschwinge: Response.

--- a/doc/plugins/search/discussion.mdwn
+++ b/doc/plugins/search/discussion.mdwn
@@ -15,3 +15,17 @@ breaks a lot when it's upgraded, I find I often have to re-run ikiwiki
 -setup after upgrading hyperestradier to force it to rebuilt its database,
 then incremental updates work again for a while. This is one of the reasons
 I want to change to a different search backend. --[[Joey]]
+
+It was a completely fresh, completely untouched, unconfigured installation
+of hyperestrainer (Debian testing on hurd-i386).
+Even when running an `ikiwiki --setup [...] --rebuild` I get this:
+
+    [...]
+    rendering templates/note.mdwn
+    rendering templates/popup.mdwn
+    updating hyperestraier search index
+    estcmd: ERROR: /home/wiki/wiki/.ikiwiki/hyperestraier: database problem
+    estcmd gather -cm -bc -cl -sd -cl /home/wiki/wiki/.ikiwiki/hyperestraier - exited nonzero: 256
+    done
+
+--[[tschwinge]]
