web commit by tschwinge: Once again.

--- a/doc/plugins/search/discussion.mdwn
+++ b/doc/plugins/search/discussion.mdwn
@@ -39,4 +39,6 @@ Now I did a `rm -rf ~wiki/wiki/.ikiwiki/hyperestraier` and re-ran
     $ echo $?
     141
 
+`--rebuild`ing once more, I'm back to the previous error message.
+
 --[[tschwinge]]
