web commit by http://roktas.myopenid.com/: reply

--- a/doc/todo/Support_subdirectory_of_a_git_repo.mdwn
+++ b/doc/todo/Support_subdirectory_of_a_git_repo.mdwn
@@ -5,3 +5,5 @@ Git does not support checking out a subdirectory of a repository as a repository
 >> Thanks! --[[JoshTriplett]]
 
 [[todo/done]]; patches from Jamey Sharp. --[[JoshTriplett]]
+
+> This is great!  Thanks to Jamey Sharp for his work and please accept my apologies for not being able to find enough time for this feature.  --[[Roktas]]
