web commit by http://subvert.org.uk/~bma/: Thoughts on the --author switch.

--- a/doc/todo/bzr.mdwn
+++ b/doc/todo/bzr.mdwn
@@ -176,3 +176,7 @@ and rcs_getctime and rcs_notify aren't written at all. --[[bma]]
 > and then push to rebuild the wiki, but there is no need to stop this going in in the mean
 > time.
 > Thanks again --[[JamesWestby]]
+
+>> I didn't know about --author, it doesn't seem to be mentioned in the manual.
+>> I'd update the patch to reflect this, but it breaks with the version of bzr
+>> from Stable, and also the one I'm currently using from backports.org.
