web commit by http://jameswestby.myopenid.com/: reply about --author

--- a/doc/todo/bzr.mdwn
+++ b/doc/todo/bzr.mdwn
@@ -180,3 +180,7 @@ and rcs_getctime and rcs_notify aren't written at all. --[[bma]]
 >> I didn't know about --author, it doesn't seem to be mentioned in the manual.
 >> I'd update the patch to reflect this, but it breaks with the version of bzr
 >> from Stable, and also the one I'm currently using from backports.org.
+
+>>> It's new (in fact I'm not even sure that it made it in to 0.90, it might be in 0.91 due
+>>> in a couple of weeks.
+>>> I was just noting it for a future enhancement. --[[JamesWestby]]
