web commit by tschwinge: I'm running Debian unstable, not testing.

--- a/doc/plugins/search/discussion.mdwn
+++ b/doc/plugins/search/discussion.mdwn
@@ -17,7 +17,7 @@ then incremental updates work again for a while. This is one of the reasons
 I want to change to a different search backend. --[[Joey]]
 
 It was a completely fresh, completely untouched, unconfigured installation
-of hyperestrainer (Debian testing on hurd-i386).
+of hyperestrainer (Debian unstable on hurd-i386).
 Even when running an `ikiwiki --setup [...] --rebuild` I get this:
 
     [...]
