* Correct generation of RFC 3339 format times for atom/rss feeds. Always use   gmtime for these since a time zone is not specified.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,7 +31,11 @@ ikiwiki (2.7) UNRELEASED; urgency=low
     `git-rev-parse --show-prefix` from all names reported by git-log.
     Patch by Jamey Sharp
 
- -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 22:15:52 -0400
+  [ Joey Hess ]
+  * Correct generation of RFC 3339 format times for atom/rss feeds. Always use
+    gmtime for these since a time zone is not specified.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 02 Sep 2007 15:25:36 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
