--- a/doc/bugs/Feeds_get_wrong_timezone..mdwn
+++ b/doc/bugs/Feeds_get_wrong_timezone..mdwn
@@ -6,3 +6,5 @@ created/modified at 0312 GMT.
 This occurs in both RSS and Atom feeds, but not in the HTML pages (which
 suggests it's not the server at fault, or IkiWiki overall, but rather
 whatever's generating the RSS and Atom is converting timezones wrongly).
+
+> [[done]], I *think* (description was not entirely clear) --[[Joey]]
