web commit by lucabrivio

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -20,6 +20,7 @@ Projects
 * [Nouvelles Informations Positives Libres community](http://wiki.nipl.net/)
 * The [Portland State Aerospace Society](http://psas.pdx.edu) website.  Converted from a combination of TWiki and MoinMoin to ikiwiki, including full history ([[rcs/Git]] backend).
 * [DebTorrent](http://debtorrent.alioth.debian.org)
+* The [Debian Packaging Handbook project](http://packaging-handbook.alioth.debian.org/wiki/)
 
 Personal sites and blogs
 ========================
