--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -9,7 +9,7 @@ The best place to download a tarball of the latest release is from
 ## packages
 
 If using Debian (since 4.0), or Ubuntu (since 6.10):
-[[[template id=note text="""
+[[template id=note text="""
 Note that Debian 4.0 and especially Ubuntu 6.10 contain older versions of
 ikiwiki, there have been lots of enhancements and bug fixes since those
 versions.
