* Updated Spanish translation from Victor Moral.

--- a/po/es.po
+++ b/po/es.po
@@ -450,38 +450,34 @@ msgid "failed to process:"
 msgstr "se ha producido un error fatal mientras procesaba la plantilla:"
 
 #: ../IkiWiki/Plugin/tex.pm:30
-#, fuzzy
 msgid "missing tex code"
-msgstr "faltan valores"
+msgstr "falta el código tex"
 
 #: ../IkiWiki/Plugin/tex.pm:37
 msgid "code includes disallowed latex commands"
-msgstr ""
+msgstr "el código incluye órdenes latex anuladas"
 
 #: ../IkiWiki/Plugin/tex.pm:95
-#, fuzzy
 msgid "failed to generate image from code"
-msgstr "no he podido determinar el tamaño de la imagen %s"
+msgstr "no he podido crear la imagen desde el código"
 
 #: ../IkiWiki/Rcs/Stub.pm:68
 msgid "getctime not implemented"
 msgstr "la funcionalidad getctime no está incluida"
 
 #: ../IkiWiki/Rcs/monotone.pm:465
-#, fuzzy
 msgid ""
 "REV is not set, not running from mtn post-commit hook, cannot send "
 "notifications"
 msgstr ""
 "La variable de entorno REV no está definida, por lo que no puede funcionar "
-"svn post-commit; no puedo enviar ninguna notificación"
+"svn post-commit desde monotone; no puedo enviar ninguna notificación"
 
 #: ../IkiWiki/Rcs/monotone.pm:468
-#, fuzzy
 msgid "REV is not a valid revision identifier, cannot send notifications"
 msgstr ""
-"La variable de entorno REV no está definida, por lo que no puede funcionar "
-"svn post-commit; no puedo enviar ninguna notificación"
+"REV no es un identificador de revisión válido, por lo que no puedo " 
+"enviar ninguna notificación"
 
 #: ../IkiWiki/Rcs/svn.pm:218
 msgid ""
