--- a/debian/changelog
+++ b/debian/changelog
@@ -34,8 +34,9 @@ ikiwiki (2.7) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Correct generation of RFC 3339 format times for atom/rss feeds. Always use
     gmtime for these since a time zone is not specified.
+  * Updated Spanish translation from Victor Moral.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 02 Sep 2007 15:25:36 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 04 Sep 2007 13:30:32 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
