web commit by PaulWise: add pabs' site/blog

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -73,6 +73,7 @@ Personal sites and blogs
 * [Patrick Winnertz (winnie)](https://www.der-winnie.de)
 * Andrew Sackville-West has setup a [family wiki](http://wiki.swclan.homelinux.org)
 * [Simon Ward's site](http://bleah.co.uk/) and [blog](http://bleah.co.uk/blog/).
+* [Paul Wise's homepage and blog](http://bonedaddy.net/pabs3/)
 
 Please feel free to add your own ikiwiki site!
 
