* table: Text::CSV doesn't return decoded unicode (XS module); decode its   return values.

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,8 +35,10 @@ ikiwiki (2.7) UNRELEASED; urgency=low
   * Correct generation of RFC 3339 format times for atom/rss feeds. Always use
     gmtime for these since a time zone is not specified.
   * Updated Spanish translation from Victor Moral.
+  * table: Text::CSV doesn't return decoded unicode (XS module); decode its
+    return values.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 04 Sep 2007 13:30:32 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 04 Sep 2007 15:19:18 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
