--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -15,5 +15,5 @@ orphans.
 Here's a list of orphaned pages on this wiki:
 
 [[orphans pages="* and !news/* and !todo/* and !bugs/* and !users/* and
-!examples/* and !tips/*"]]
+!examples/* and !tips/* and !sandbox/* and !wikiicons/* and !plugins/*"]]
 """]]
