--- a/doc/post-commit.mdwn
+++ b/doc/post-commit.mdwn
@@ -1,10 +1,7 @@
 If your wiki is kept in [[revision_control|rcs]], a post-commit hook is run
-every time you commit a change to your repository. To make the wiki be
-updated each time a commit is made, it can be run from (or as) a
-post-commit hook.
+every time you commit a change to your repository.
 
-The best way to run ikiwiki in a post-commit hook is using a wrapper, which
-ikiwiki is usually configured to generate using a setup file.
+ikiwiki generates the "post-commit hook" once you've uncommented the relevant section (under wrappers) in the ikiwiki.setup.
 
 The generated wrapper is a C program that is designed to safely be made
 suid if necessary. It's hardcoded to run ikiwiki with the settings
@@ -17,4 +14,4 @@ your wiki checkout and html directory. If so, you can safely make
 the wrapper suid to a user who can write there (*not* to root!). You might
 want to read [[Security]] first.
 
-[[Setup]] explains setting this up in more detail.
+[[Setup]] explains setting this up from the start and see [[rcs/details]] to know more.
