--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -292,6 +292,10 @@ configuration options of their own.
   using command-line switches, you will rarely need to use this, but it can be
   useful for the odd option that lacks a command-line switch.
 
+# SEE ALSO
+
+* [[ikiwiki-mass-rebuild]](8)
+
 # AUTHOR
 
 Joey Hess <joey@ikiwiki.info>
