--- a/debian/changelog
+++ b/debian/changelog
@@ -37,8 +37,10 @@ ikiwiki (2.7) UNRELEASED; urgency=low
   * Updated Spanish translation from Victor Moral.
   * table: Text::CSV doesn't return decoded unicode (XS module); decode its
     return values.
+  * Change git test suite to reflect change in log for initial repo creation
+    commit. 
 
- -- Joey Hess <joeyh@debian.org>  Tue, 04 Sep 2007 15:19:18 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 05 Sep 2007 19:43:37 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
