--- a/debian/changelog
+++ b/debian/changelog
@@ -38,9 +38,10 @@ ikiwiki (2.7) UNRELEASED; urgency=low
   * table: Text::CSV doesn't return decoded unicode (XS module); decode its
     return values.
   * Change git test suite to reflect change in log for initial repo creation
-    commit. 
+    commit.
+  * Add the ikiwiki-update-wikilist command.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 05 Sep 2007 19:43:37 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 05 Sep 2007 20:07:24 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
