web commit by JeremyReed: reply about install requirements link

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -189,6 +189,9 @@ The Ikiwiki docs about this requirement got removed in Revision 4367. There shou
 
 > There is a page, [[install]] documents that 3.05 is needed.
 
+>> Sorry, I missed that. With hundreds of wikipages it is hard to read all of them.
+>> I am updating the download page now to link to it.
+
 I am now using ikiwiki 2.6.1 on my testing system.
 
 --JeremyReed
