web commit by JeremyReed: link to install wikipage.

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -6,6 +6,8 @@ add your wiki to [[IkiwikiUsers]] if you use ikiwiki.
 The best place to download a tarball of the latest release is from 
 <http://packages.debian.org/unstable/source/ikiwiki>.
 
+Installation steps and requirements are listed on the [[install]] page.
+
 ## packages
 
 If using Debian (since 4.0), or Ubuntu (since 6.10):
