web commit by arpitjain11: Gallery Plugin added

--- a/doc/plugins/contrib/gallery.mdwn
+++ b/doc/plugins/contrib/gallery.mdwn
@@ -33,4 +33,4 @@ Additional details are available [here](http://myweb.unomaha.edu/~ajain/ikiwikig
 
 -- [[arpitjain]]
 
-[[tag plugin]] [[tag patch]] [[tag soc]] [[tag wishlist]]
+[[tag plugins]] [[tag patch]] [[tag soc]] [[tag wishlist]]
