--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.7) UNRELEASED; urgency=low
+ikiwiki (2.7) unstable; urgency=low
 
   [ Joey Hess ]
   * Add an editcontent hook.
@@ -43,7 +43,7 @@ ikiwiki (2.7) UNRELEASED; urgency=low
   * Exclude external plugin from syntax check since it uses a module that is
     not in the build depends. Closes: #441171
 
- -- Joey Hess <joeyh@debian.org>  Fri, 07 Sep 2007 13:04:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 08 Sep 2007 21:54:11 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
