--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -14,15 +14,17 @@ installed, and also uses the following perl modules if available:
 [[cpan XML::Feed]], [[cpan File::MimeInfo]], [[cpan Locale::gettext]]
 (version 1.04 or newer).
 
+Various [[plugins]] use other libraries and utlities; see their individual
+documentation for details.
+
+The Debian packages depend on an appropriate set of these modules.
+
 While Fedora 7 doesn't have an ikiwiki package, you can install needed
 perl modules using this command:
 
 	yum install perl-Text-Markdown perl-Mail-Sendmail perl-HTML-Scrubber \
 	  perl-XML-Simple perl-TimeDate perl-HTML-Template perl-CGI-FormBuilder \
 	  perl-CGI-Session perl-File-MimeInfo perl-gettext
-
-Various [[plugins]] use other libraries and utlities; see their individual
-documentation for details.
 
 If you want to install from the tarball, you should make sure that the
 required perl modules are installed, then run:
