--- a/doc/tips/integrated_issue_tracking_with_ikiwiki.mdwn
+++ b/doc/tips/integrated_issue_tracking_with_ikiwiki.mdwn
@@ -4,7 +4,7 @@ By Joey Hess, LinuxWorld.com
 
 [[template id=note text="""
 [First published](http://www.linuxworld.com/news/2007/040607-integrated-issue-tracking-ikiwiki.html)
-on [LinuxWorld.com](http:://www.linuxworld.com/), a publication of Network
+on [LinuxWorld.com](http://www.linuxworld.com/), a publication of Network
 World Inc., 118 Turnpike Rd., Southboro, MA 01772.
 """]]
 
