--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (2.8) UNRELEASED; urgency=low
+
+  * Redid the debian/copyright file, using the proposed new copyright file
+    format. Included many details not previously listed in the old file.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 10 Sep 2007 20:25:40 -0400
+
 ikiwiki (2.7) unstable; urgency=low
 
   [ Joey Hess ]
